GNOME Bugzilla – Bug 707663
Ignore window visibility when sorting apps
Last modified: 2013-09-07 01:45:35 UTC
Auto-minimization of fullscreen windows messes up the app switcher: (1) run three applications (A), (B) and (C) (2) focus (A) (3) focus (B), fullscreen it (4) <super>tab to (A) (5) <super>tab again - (C) is focused instead of (B) We already stopped putting minimized windows at the end of the window list in bug 693991, we should do the same for apps ...
Created attachment 254315 [details] [review] app: Stop using window visibility when comparing apps shell_app_compare() (which is only used as sort function for shell_app_system_get_running() nowadays) currently takes the visibility of an app's windows into account, e.g. applications with visible windows (non-minimized windows on current workspace) sort earlier than applications without. This translate traditional window-switcher behavior to applications, but we stopped sorting by workspace in the app-switcher a while ago, and with the new auto-minimization behavior of fullscreen windows it is more confusing than helpful - in fact, since mutter commit 7e61ef09369a we no longer do this for the window list, so it makes sense to apply the same to application sorting.
Created attachment 254316 [details] [review] app: Removed unused function
Review of attachment 254316 [details] [review]: OK.
Review of attachment 254315 [details] [review]: Ah, this explains it. I always use the window switcher.
Attachment 254315 [details] pushed as 1dfc38d - app: Stop using window visibility when comparing apps Attachment 254316 [details] pushed as b437e68 - app: Removed unused function > Ah, this explains it. I always use the window switcher. I figured :-)
*** Bug 700133 has been marked as a duplicate of this bug. ***