src/cinnamon-app.c
@@ -976,9 +976,7 @@ cinnamon_app_get_last_user_time (CinnamonApp *app)
  *
  * Compare one #CinnamonApp instance to another, in the following way:
  *   - Running applications sort before not-running applications.
- *   - If one of them has visible windows and the other does not, the one
- *     with visible windows is first.
- *   - Finally, the application which the user interacted with most recently
+ *   - The application which the user interacted with most recently
  *     compares earlier.
  */
 int
@@ -993,14 +991,6 @@ cinnamon_app_compare (CinnamonApp *app,
         return -1;
       return 1;
     }
-
-  vis_app = cinnamon_app_has_visible_windows (app);
-  vis_other = cinnamon_app_has_visible_windows (other);
-
-  if (vis_app && !vis_other)
-    return -1;
-  else if (!vis_app && vis_other)
-    return 1;
 
   if (app->state == CINNAMON_APP_STATE_RUNNING)
     {
